-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2014-04-03	pwessel
	* gmt_init.c:		Added new common GMT option -d[i|o\<nodata>], which can be
				used anywhere to convert users <nodata> values to NaN, and to do
				the reverse on output.

2014-03-26	remko
	* ps2raster.c:		Bug fix: -C should also apply when computing BoundingBox.

2014-03-03	pwessel
	* pslegend.c:		The flush_paragraph was not reset to false before 2nd loop,
				causing the text (T) option to fail if it was the first item.

-----------------------------------------------------------------------------------------
2014-03-01	pwessel
	GMT 5.1.1 finalized and released.
-----------------------------------------------------------------------------------------
2014-02-27	remko
	* ps2raster.c:		Fix issue with psimage-included EPS files (issue #521)

2014-02-25	pwessel
	* xyz2grd.c:		Gave incorrect n_read count and for -bi -An insisted on 3 cols.

2014-02-22	pwessel
	* grdcontour.c:		Fix writing of contour labels to text file.

2014-02-20	pwessel
	* grdcontour.c:		The -Zscale/offset option was applied incorrectly due to a
				change in the underlying scaling function.
	* grdvolume.c:		---"---

2014-02-19	pwessel
	*mgd77/mgd77list.c:	Crashed with -Am4 as time column was not loaded.

2014-02-18	pwessel
	*gmtmath.c:		Crashed for some options because a dataset's n_records was not set.

2014-02-10	pwessel
	*gmt2kml.c:		Make sure the default style IDs are unique for each process.

2014-02-06	pwessel
	* psxy.c:		New modifier -Ex[+]y[+] to do asymmetrical error bars.

2014-02-03	pwessel
	* gmtconvert.c:		New option -C to limit output to segments whose record count
				matches our criteria.
	* pslib.c:		Auto-widen paragraph width to at least fit widest word.

2014-01-26	pwessel
	* gmt_grdio.c:		Building the grid command string could exceed its length if